fixed spacing on css

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,127 +1,94 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #d9dcd6;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /* Main font color moved to body */
-    color: #ffffff;
+  background-color: #d9dcd6;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* Main font color moved to body */
+  color: #ffffff;
 }
 /* moved font family to body due to reuse. specific overrides remain */
 
-p {
-    font-size: 16px;
-}
+p {font-size: 16px;}
 
 /* Start of Header Section */
 header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
+  padding: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #2a607c;
 }
 
-header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
+header h1 {display: inline-block; font-size: 48px;}
 
 /* Trimmed selectors since seo is only used once */
-.seo {
-    color: #d9dcd6;
-}
+.seo {color: #d9dcd6;}
 
 table {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    /* font family override from header back to main font */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    list-style-type: none;
+  padding-top: 15px;
+  margin-right: 20px;
+  float: right;
+  /* font family override from header back to main font */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  list-style-type: none;
 }
 
-td {
-    display: inline-block;
-    margin-left: 25px;
-}
+td {display: inline-block; margin-left: 25px;}
 
-a {
-    text-decoration: none;
-    color: #ffffff;
-}
+a {text-decoration: none; color: #ffffff;}
 
 /* End of header section and start of hero section*/
 figure {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
+  height: 800px;
+  width: 100%;
+  margin-bottom: 25px;
 }
 
 /* .hero changed to remove background image to allow for alt text.
 html changed to a figure and class was removed as it was no longer necessary.
 added figure img to fix sizing of the image */
-
-figure img {
-    width: inherit;
-    height: inherit;
-}
+figure img {width: inherit; height: inherit;}
 
 /* End of hero section and start of content section */
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
+.float-left {float: left; margin-right: 25px;}
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
+.float-right {float: right; margin-left: 25px;}
 
 .content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
 }
 
 .content section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  background-color: #0072bb;
 }
 
-.content img {
-    max-height: 200px;
-}
+.content img {max-height: 200px;}
 
-.content h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+.content h2 {margin-bottom: 20px; font-size: 36px;}
 /* Combined sets of 3 into single declaration blocks */
 
 /* End of content section and start of benefits section */
 .benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    background-color: #2589bd;
+  margin-right: 20px;
+  padding: 20px;
+  clear: both;
+  float: right;
+  width: 20%;
+  height: 100%;
+  background-color: #2589bd;
 }
 
-.benefits section {
-    margin-bottom: 32px;
-}
+.benefits section {margin-bottom: 32px;}
 
-.benefits h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+.benefits h3 {margin-bottom: 10px; text-align: center;}
 
 .benefits img {
     display: block;
@@ -140,6 +107,4 @@ footer {
     color: black;
 }
 
-footer h2 {
-    font-size: 20px;
-}
+footer h2 {font-size: 20px;}
